Archive2/ad/2e0a05c5d248a9/output
main.cpp:10:34: error: variable length arrays are a C99 feature [-Werror,-Wvla-extension]
int a,b,c,d,i,e,f,h,j,k=h,sum=0,m[k-1],n[h-1],l,o(0); cout<<"\n";
                                 ^
main.cpp:10:41: error: variable length arrays are a C99 feature [-Werror,-Wvla-extension]
int a,b,c,d,i,e,f,h,j,k=h,sum=0,m[k-1],n[h-1],l,o(0); cout<<"\n";
                                        ^
main.cpp:23:20: warning: multiple unsequenced modifications to 'e' [-Wunsequenced]
                e=e--; i=i--; l=h-1; 
                 ~ ^
main.cpp:23:27: warning: multiple unsequenced modifications to 'i' [-Wunsequenced]
                e=e--; i=i--; l=h-1; 
                        ~ ^
main.cpp:10:27: warning: unused variable 'sum' [-Wunused-variable]
int a,b,c,d,i,e,f,h,j,k=h,sum=0,m[k-1],n[h-1],l,o(0); cout<<"\n";
                          ^
main.cpp:10:25: warning: variable 'h' is uninitialized when used here [-Wuninitialized]
int a,b,c,d,i,e,f,h,j,k=h,sum=0,m[k-1],n[h-1],l,o(0); cout<<"\n";
                        ^
main.cpp:10:20: note: initialize the variable 'h' to silence this warning
int a,b,c,d,i,e,f,h,j,k=h,sum=0,m[k-1],n[h-1],l,o(0); cout<<"\n";
                   ^
                    = 0
4 warnings and 2 errors generated.
